# blackengine-editor

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderwindow.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderwindow.cpp  renderwindow.h
src/editor/: Scene.cpp  Scene.h
